--- a/hello.html
+++ b/hello.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="wakui">
     <head>
-    <title>
+        <title>
         Hello
-    </title>
-    <body>
-        
-    </body>
-</head> 
+        </title>
+        <body>
+<h1>sena</h1>
+        </body>
+    </head> 
 </html> 
 
