--- a/hello.html
+++ b/hello.html
@@ -3,20 +3,12 @@
     <head>
         <title>
         Hello
-<<<<<<< HEAD
         </title>
         <body>
-<h1>sena</h1>
+            <h1 style=color:red;>sena
+            </h1>
+            <h2>リンゴ</h2>
         </body>
     </head> 
-=======
-    </title>
-    <body>
-        <h2>
-            リンゴ
-        </h2>
-    </body>
-</head> 
->>>>>>> 8da6f8455528396671e1f42f83e56cf7186f5094
 </html> 
 
